fix(input): custom suffix icon should always be visible

--- a/src/styles/input.styl
+++ b/src/styles/input.styl
@@ -113,7 +113,7 @@
     // buttons
     .sui-button,
     .sui-button:hover, .sui-button:active, .sui-button:focus {
-      margin 0 -13px 0 -12px
+      margin 0 -13px 0 -13px
     }
   }
 
@@ -124,14 +124,14 @@
       }
     }
     .sui-input__prepend {
-      border-left 0
+      border-right 0
       border-top-left-radius border-radius--normal
       border-bottom-left-radius border-radius--normal
 
       .sui-button {
         border-top-right-radius 0
         border-bottom-right-radius 0
-        margin-right -14px
+        margin-right -13px
       }
     }
     .sui-input__input {
